objects/OpportunityApprovalMatrix__mdt.object
<CustomObject>
    <fields>
        <fullName>CapitalAmountRange__c</fullName>
        <label>Capital Amount Range</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-10000000 to 10000000</fullName>
                    <default>true</default>
                    <label>-10000000 to 10000000</label>
                </value>
                <value>
                    <fullName>5000.01 to 10000000</fullName>
                </value>
                <value>
                    <fullName>10000.01 to 10000000</fullName>
                </value>
                <value>
                    <fullName>0.01-10000000</fullName>
                    <isActive>false</isActive>
                    <label>0.01-10000000</label>
                </value>
                <value>
                    <fullName>10000.01-10000000</fullName>
                    <isActive>false</isActive>
                    <label>10000.01-10000000</label>
                </value>
                <value>
                    <fullName>25000.01-10000000</fullName>
                    <isActive>false</isActive>
                    <label>25000.01-10000000</label>
                </value>
                <value>
                    <fullName>40000.01 to 10000000</fullName>
                    <isActive>false</isActive>
                    <label>40000.01 to 10000000</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CapitalRange__c</fullName>
        <label>Capital Range</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-100000 to 100000</fullName>
                    <default>true</default>
                    <label>-100000 to 100000</label>
                </value>
                <value>
                    <fullName>10.01 to 100000</fullName>
                </value>
                <value>
                    <fullName>20.01 to 100000</fullName>
                </value>
                <value>
                    <fullName>0-19</fullName>
                    <isActive>false</isActive>
                    <label>0-19</label>
                </value>
                <value>
                    <fullName>0-19.99</fullName>
                    <isActive>false</isActive>
                    <label>0-19.99</label>
                </value>
                <value>
                    <fullName>0.01-100000</fullName>
                    <isActive>false</isActive>
                    <label>0.01-100000</label>
                </value>
                <value>
                    <fullName>0.01-19.99</fullName>
                    <isActive>false</isActive>
                    <label>0.01-19.99</label>
                </value>
                <value>
                    <fullName>0.01-9999</fullName>
                    <isActive>false</isActive>
                    <label>0.01-9999</label>
                </value>
                <value>
                    <fullName>1-19</fullName>
                    <isActive>false</isActive>
                    <label>1-19</label>
                </value>
                <value>
                    <fullName>20-29</fullName>
                    <isActive>false</isActive>
                    <label>20-29</label>
                </value>
                <value>
                    <fullName>20-29.99</fullName>
                    <isActive>false</isActive>
                    <label>20-29.99</label>
                </value>
                <value>
                    <fullName>20.01-100000</fullName>
                    <isActive>false</isActive>
                    <label>20.01-100000</label>
                </value>
                <value>
                    <fullName>30-9999</fullName>
                    <isActive>false</isActive>
                    <label>30-9999</label>
                </value>
                <value>
                    <fullName>30.01 to 100000</fullName>
                    <isActive>false</isActive>
                    <label>30.01 to 100000</label>
                </value>
                <value>
                    <fullName>30.01-100000</fullName>
                    <isActive>false</isActive>
                    <label>30.01-100000</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieldAPIName__c</fullName>
        <label>Field API Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COO__c</fullName>
                </value>
                <value>
                    <fullName>CorporateLegal__c</fullName>
                </value>
                <value>
                    <fullName>DirectorLARSNZDevelopment__c</fullName>
                </value>
                <value>
                    <fullName>GMLARS__c</fullName>
                </value>
                <value>
                    <fullName>GMRetailAdmin__c</fullName>
                </value>
                <value>
                    <fullName>GroupGeneralManagerLARS__c</fullName>
                </value>
                <value>
                    <fullName>RMLARS__c</fullName>
                </value>
                <value>
                    <fullName>RMRetailAdmin__c</fullName>
                </value>
                <value>
                    <fullName>CentreManager__c</fullName>
                </value>
                <value>
                    <fullName>RetailManager__c</fullName>
                </value>
                <value>
                    <fullName>Development_Executive__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeaseType__c</fullName>
        <label>Lease Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OPP_CommercialLeasing</fullName>
                    <default>true</default>
                    <label>OPP_CommercialLeasing</label>
                </value>
                <value>
                    <fullName>OPP - Retail Leasing</fullName>
                </value>
                <value>
                    <fullName>OPP - Store Room Leasing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RentAmountRange__c</fullName>
        <label>Rent Amount Range</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-10000000 to 10000000</fullName>
                    <default>true</default>
                    <label>-10000000 to 10000000</label>
                </value>
                <value>
                    <fullName>-10000000 to -15000.01</fullName>
                </value>
                <value>
                    <fullName>-10000000 to -20000.01</fullName>
                </value>
                <value>
                    <fullName>-10000000 to -25000.01</fullName>
                </value>
                <value>
                    <fullName>-10000000 to -30000.01</fullName>
                </value>
                <value>
                    <fullName>-10000000 to -35000.01</fullName>
                </value>
                <value>
                    <fullName>-10000000 to -40000.01</fullName>
                </value>
                <value>
                    <fullName>-10000000 to -45000.01</fullName>
                </value>
                <value>
                    <fullName>0.01-10000000</fullName>
                    <isActive>false</isActive>
                    <label>0.01-10000000</label>
                </value>
                <value>
                    <fullName>10000.01-10000000</fullName>
                    <isActive>false</isActive>
                    <label>10000.01-10000000</label>
                </value>
                <value>
                    <fullName>25000.01-10000000</fullName>
                    <isActive>false</isActive>
                    <label>25000.01-10000000</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RentRange__c</fullName>
        <label>Rent Range</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-100000 to 100000</fullName>
                    <default>true</default>
                    <label>-100000 to 100000</label>
                </value>
                <value>
                    <fullName>-100000 to -00.01</fullName>
                </value>
                <value>
                    <fullName>-100000 to -03.01</fullName>
                </value>
                <value>
                    <fullName>-100000 to -10.01</fullName>
                    <isActive>false</isActive>
                    <label>-100000 to -10.01</label>
                </value>
                <value>
                    <fullName>-100000 to -25.01</fullName>
                    <isActive>false</isActive>
                    <label>-100000 to -25.01</label>
                </value>
                <value>
                    <fullName>0-9</fullName>
                    <isActive>false</isActive>
                    <label>0-9</label>
                </value>
                <value>
                    <fullName>0-9.99</fullName>
                    <isActive>false</isActive>
                    <label>0-9.99</label>
                </value>
                <value>
                    <fullName>0.01-100000</fullName>
                    <isActive>false</isActive>
                    <label>0.01-100000</label>
                </value>
                <value>
                    <fullName>0.01-9.99</fullName>
                    <isActive>false</isActive>
                    <label>0.01-9.99</label>
                </value>
                <value>
                    <fullName>0.01-9999</fullName>
                    <isActive>false</isActive>
                    <label>0.01-9999</label>
                </value>
                <value>
                    <fullName>1-9</fullName>
                    <isActive>false</isActive>
                    <label>1-9</label>
                </value>
                <value>
                    <fullName>10-29</fullName>
                    <isActive>false</isActive>
                    <label>10-29</label>
                </value>
                <value>
                    <fullName>10-29.99</fullName>
                    <isActive>false</isActive>
                    <label>10-29.99</label>
                </value>
                <value>
                    <fullName>10-9999</fullName>
                    <isActive>false</isActive>
                    <label>10-9999</label>
                </value>
                <value>
                    <fullName>10.01-100000</fullName>
                    <isActive>false</isActive>
                    <label>10.01-100000</label>
                </value>
                <value>
                    <fullName>30-9999</fullName>
                    <isActive>false</isActive>
                    <label>30-9999</label>
                </value>
                <value>
                    <fullName>30.01-100000</fullName>
                    <isActive>false</isActive>
                    <label>30.01-100000</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Receivable Admin</fullName>
                </value>
                <value>
                    <fullName>Administration Manager</fullName>
                </value>
                <value>
                    <fullName>Asset General Manager</fullName>
                </value>
                <value>
                    <fullName>Centre Manager</fullName>
                </value>
                <value>
                    <fullName>Chief Operating Officer</fullName>
                </value>
                <value>
                    <fullName>Commercial Leasing Admin</fullName>
                </value>
                <value>
                    <fullName>Commercial Leasing General Manager</fullName>
                </value>
                <value>
                    <fullName>Commercial Leasing Regional Manager</fullName>
                </value>
                <value>
                    <fullName>Commercial Property Manager</fullName>
                </value>
                <value>
                    <fullName>Commercial Retail Manager</fullName>
                </value>
                <value>
                    <fullName>Corporate Legal</fullName>
                </value>
                <value>
                    <fullName>Development Executive</fullName>
                </value>
                <value>
                    <fullName>Director LARS &amp; NZ Development</fullName>
                </value>
                <value>
                    <fullName>Fitout Contributions Admin</fullName>
                </value>
                <value>
                    <fullName>General Manager Leasing</fullName>
                </value>
                <value>
                    <fullName>General Manager Retail Design</fullName>
                </value>
                <value>
                    <fullName>GM of Corporate Accounting</fullName>
                </value>
                <value>
                    <fullName>GM Retail Admin &amp; Delivery</fullName>
                </value>
                <value>
                    <fullName>Group General Manager - LARS</fullName>
                </value>
                <value>
                    <fullName>Leasing Executive</fullName>
                </value>
                <value>
                    <fullName>Leasing Finance Analyst</fullName>
                </value>
                <value>
                    <fullName>Regional Manager - LARS</fullName>
                </value>
                <value>
                    <fullName>Regional Manager Retail Design</fullName>
                </value>
                <value>
                    <fullName>Regional Mgr Retail Admin</fullName>
                </value>
                <value>
                    <fullName>Regional Mgr Retail Delivery</fullName>
                </value>
                <value>
                    <fullName>Reg Retailer Account Admin</fullName>
                </value>
                <value>
                    <fullName>Retail Admin Assistant</fullName>
                </value>
                <value>
                    <fullName>Retail Administrator</fullName>
                </value>
                <value>
                    <fullName>Retail Delivery Coordinator</fullName>
                </value>
                <value>
                    <fullName>Retail Design Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                    <default>true</default>
                    <label>Tier 1</label>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retail Initial Approval</fullName>
                </value>
                <value>
                    <fullName>Retail Risk Approval</fullName>
                </value>
                <value>
                    <fullName>Retail Final Approval</fullName>
                </value>
                <value>
                    <fullName>Commercial Initial Approval</fullName>
                </value>
                <value>
                    <fullName>Commercial Risk Approval</fullName>
                </value>
                <value>
                    <fullName>Commercial Final Approval</fullName>
                </value>
                <value>
                    <fullName>Store Room License Approval</fullName>
                </value>
                <value>
                    <fullName>Commercial RM Approval</fullName>
                    <isActive>false</isActive>
                    <label>Commercial RM Approval</label>
                </value>
                <value>
                    <fullName>Retail RM Approval</fullName>
                    <isActive>false</isActive>
                    <label>Retail RM Approval</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>projectrole__c</fullName>
        <label>Project Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Receivable Admin</fullName>
                    <default>true</default>
                    <label>Accounts Receivable Admin</label>
                </value>
                <value>
                    <fullName>Administration Manager</fullName>
                </value>
                <value>
                    <fullName>Asset General Manager</fullName>
                </value>
                <value>
                    <fullName>Centre Manager</fullName>
                </value>
                <value>
                    <fullName>Chief Operating Officer</fullName>
                </value>
                <value>
                    <fullName>Commercial Leasing Admin</fullName>
                </value>
                <value>
                    <fullName>Commercial Leasing General Manager</fullName>
                </value>
                <value>
                    <fullName>Commercial Leasing Regional Manager</fullName>
                </value>
                <value>
                    <fullName>Commercial Property Manager</fullName>
                </value>
                <value>
                    <fullName>Commercial Retail Manager</fullName>
                </value>
                <value>
                    <fullName>Corporate Legal</fullName>
                </value>
                <value>
                    <fullName>D&amp;C Special Project Coordinator</fullName>
                </value>
                <value>
                    <fullName>Development Executive</fullName>
                </value>
                <value>
                    <fullName>Development Finance Manager</fullName>
                </value>
                <value>
                    <fullName>Director LARS &amp; NZ Development</fullName>
                </value>
                <value>
                    <fullName>Fitout Contributions Admin</fullName>
                </value>
                <value>
                    <fullName>General Manager Leasing</fullName>
                </value>
                <value>
                    <fullName>General Manager Retail Design</fullName>
                </value>
                <value>
                    <fullName>GM of Corporate Accounting</fullName>
                </value>
                <value>
                    <fullName>GM Retail Admin &amp; Delivery</fullName>
                </value>
                <value>
                    <fullName>Group General Manager - LARS</fullName>
                </value>
                <value>
                    <fullName>Leasing Executive</fullName>
                </value>
                <value>
                    <fullName>Leasing Finance Analyst</fullName>
                </value>
                <value>
                    <fullName>Project Regional Manager - LARS</fullName>
                </value>
                <value>
                    <fullName>Project Retail Administrator</fullName>
                </value>
                <value>
                    <fullName>Project Retail Design Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Manager - LARS</fullName>
                </value>
                <value>
                    <fullName>Regional Manager Retail Design</fullName>
                </value>
                <value>
                    <fullName>Regional Mgr Retail Admin</fullName>
                </value>
                <value>
                    <fullName>Regional Mgr Retail Delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Opportunity Approval Matrix</label>
    <listViews>
        <fullName>CommercialFinal</fullName>
        <columns>MasterLabel</columns>
        <columns>Role__c</columns>
        <columns>FieldAPIName__c</columns>
        <columns>Tier__c</columns>
        <columns>RentAmountRange__c</columns>
        <columns>RentRange__c</columns>
        <columns>CapitalAmountRange__c</columns>
        <columns>CapitalRange__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>CommercialFinal</value>
        </filters>
        <label>Commercial Final</label>
    </listViews>
    <listViews>
        <fullName>CommercialInitial</fullName>
        <columns>MasterLabel</columns>
        <columns>Role__c</columns>
        <columns>FieldAPIName__c</columns>
        <columns>Tier__c</columns>
        <columns>RentAmountRange__c</columns>
        <columns>RentRange__c</columns>
        <columns>CapitalAmountRange__c</columns>
        <columns>CapitalRange__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>CommercialInitial</value>
        </filters>
        <label>Commercial Initial</label>
    </listViews>
    <listViews>
        <fullName>CommercialRisk</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Role__c</columns>
        <columns>FieldAPIName__c</columns>
        <columns>CapitalRange__c</columns>
        <columns>LeaseType__c</columns>
        <columns>RentRange__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>CommercialRisk</value>
        </filters>
        <label>Commercial Risk</label>
    </listViews>
    <listViews>
        <fullName>RetailFinal</fullName>
        <columns>MasterLabel</columns>
        <columns>LeaseType__c</columns>
        <columns>Role__c</columns>
        <columns>Tier__c</columns>
        <columns>RentAmountRange__c</columns>
        <columns>RentRange__c</columns>
        <columns>CapitalAmountRange__c</columns>
        <columns>CapitalRange__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>RetailFinal</value>
        </filters>
        <label>Retail Final</label>
    </listViews>
    <listViews>
        <fullName>RetailInitial</fullName>
        <columns>MasterLabel</columns>
        <columns>Role__c</columns>
        <columns>Tier__c</columns>
        <columns>RentAmountRange__c</columns>
        <columns>RentRange__c</columns>
        <columns>CapitalAmountRange__c</columns>
        <columns>CapitalRange__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>RetailInitial</value>
        </filters>
        <label>Retail Initial</label>
    </listViews>
    <listViews>
        <fullName>RetailRisk</fullName>
        <columns>MasterLabel</columns>
        <columns>FieldAPIName__c</columns>
        <columns>Role__c</columns>
        <columns>Tier__c</columns>
        <columns>Type__c</columns>
        <columns>LeaseType__c</columns>
        <columns>CapitalRange__c</columns>
        <columns>RentRange__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>RetailRisk</value>
        </filters>
        <label>Retail Risk</label>
    </listViews>
    <pluralLabel>Opportunity Approval Matrices</pluralLabel>
</CustomObject>